# libiht-eval

./: .gitignore  Dockerfile  README.md  setup.sh
libihteval/: motivating_exp.sh
targets/adversarial/: Makefile  README.md
targets/adversarial/include/: malware.h  utils.h
targets/adversarial/src/: malware.c  sample_ca_fsbase.c  sample_ca_nx.c  sample_ca_ripsyscall.c  sample_ca_smc.c  sample_ca_vmleave.c  sample_ea_envvar.c  sample_ea_mapname.c  sample_ea_pageperm.c  sample_ea_vmleave.c  sample_fl_fsbase.c  sample_fl_ripsyscall.c  sample_ro_jitbr.c  sample_ro_jitlib.c  sample_template.c  utils.c
tools/drcfg/: CMakeLists.txt  README.md  drcfg.c
tools/drcftrace/: CMakeLists.txt  README.md  drcftrace.c
tools/pincftrace/: README.md  makefile.rules  pincftrace.cpp
